# ambiq-apollo3-rs

./: Cargo.toml
src/: adc.rs  apbdma.rs  bleif.rs  cachectrl.rs  clkgen.rs  ctimer.rs  gpio.rs  iom0.rs  lib.rs  mcuctrl.rs  mspi.rs  pdm.rs  pwrctrl.rs  rstgen.rs  rtc.rs  scard.rs  security.rs  wdt.rs
src/adc/: cfg.rs  dmacfg.rs  dmastat.rs  dmatargaddr.rs  dmatotcount.rs  dmatrigen.rs  dmatrigstat.rs  fifo.rs  fifopr.rs  intclr.rs  inten.rs  intset.rs  intstat.rs  scwlim.rs  sl0cfg.rs  sl1cfg.rs  sl2cfg.rs  sl3cfg.rs  sl4cfg.rs  sl5cfg.rs  sl6cfg.rs  sl7cfg.rs  stat.rs  swt.rs  wllim.rs  wulim.rs
src/apbdma/: bbinput.rs  bbsetclear.rs  bbvalue.rs  debug.rs  debugdata.rs
src/bleif/: blecfg.rs  bledbg.rs  bstatus.rs  clkcfg.rs  cmd.rs  cmdstat.rs  cqaddr.rs  cqcfg.rs  cqcuridx.rs  cqendidx.rs  cqflags.rs  cqpauseen.rs  cqsetclear.rs  cqstat.rs  dmacfg.rs  dmastat.rs  dmatargaddr.rs  dmatotcount.rs  dmatrigen.rs  dmatrigstat.rs  fifoptr.rs  fifothr.rs  intclr.rs  inten.rs  intset.rs  intstat.rs  mspicfg.rs  offsethi.rs  pwrcmd.rs  status.rs
src/cachectrl/: cachecfg.rs  ctrl.rs  dmon0.rs  dmon1.rs  dmon2.rs  dmon3.rs  flashcfg.rs  imon0.rs  imon1.rs  imon2.rs  imon3.rs  ncr0end.rs  ncr0start.rs  ncr1end.rs  ncr1start.rs
src/clkgen/: acalctr.rs  blebucktonadj.rs  calrc.rs  calxt.rs  cctrl.rs  clkkey.rs  clkout.rs  clocken2stat.rs  clocken3stat.rs  clockenstat.rs  freqctrl.rs  hfadj.rs  intrptclr.rs  intrpten.rs  intrptset.rs  intrptstat.rs  octrl.rs  status.rs
src/ctimer/: aux0.rs  aux1.rs  aux2.rs  aux3.rs  aux4.rs  aux5.rs  aux6.rs  aux7.rs  capturecontrol.rs  (+68 more)
(+220 files in other folders)
