[package]
name = "apollo3"
version = "0.1.0"
authors = ["Joel Winarske <joel.winarske@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bare-metal = "0.2.5"
cortex-m = "0.6.2"
vcell = "0.1.2"

[dependencies.cortex-m-rt]
optional = true
version = "0.6.12"

[features]
rt = ["cortex-m-rt/device"]
